# kinetic

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
actor/: CMakeLists.txt  CPPLINT.cfg  build.gradle  readme.md
actor/scripts/: build_wasm.py  prebuild.py
actor/src/: actor.cc  actor.h  body.cc  body.h  const.h  orbit.cc  orbit.h  path.cc  path.h  system.cc  system.h  uni.h  universe.cc  universe.h  util.h  uuid.cc  uuid.h  vector.h
actor/test/: main.cc  testbody.cc  testorbit.cc  testpath.cc  testsystem.cc  testuuid.cc  testvector.cc
client/: build.gradle
client/src/main/kotlin/: Core.kt  Input.kt  Scene.kt
client/src/main/resources/: kinetic.html
client/src/test/resources/: client-tests.html
gradle/wrapper/: gradle-wrapper.properties
server/: README.md  build.gradle  main.py  settings.py  setup.py
server/scripts/: orbit_vis.py  sample_orbit_plot.py
server/server/: event.py  main.py  server.py  worker.py
server/server/model/: actor.pxd  actor.pyx  body.pxd  body.pyi  body.pyx  const.py  model.py  orbit.pxd  orbit.pyi  orbit.pyx  path.pxd  path.pyi  path.pyx  system.pxd  system.pyi  system.pyx  universe.pxd  universe.pyx  vector.pxd  vector.pyi  vector.pyx
server/server/objects/: body.py  gameobject.py
server/server/util/: const.py  orbit.py
server/src/main/py/: server.py
server/test/: test_event.py  test_server.py
server/test/model/: test_actor.py  test_body.py  test_orbit.py  test_path.py  test_system.py  test_universe.py  test_vector.py
server/test/objects/: test_body.py  test_gameobject.py
(+7 files in other folders)
